--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.14.1",
     "@tanstack/react-query": "^5.87.1",
     "@tanstack/react-query-devtools": "^5.87.3",
     "apexcharts": "^5.3.5",
