feat: BIVS PDMD page with table for list and inspection summary viewer page feat: BIVS dashboard with apex chart and dummy data feat: departmental dashboard with apex chart and dummy data chore: added image not found in public

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_API_URL_DEV=https://jsonplaceholder.typicode.com
 VITE_APP_DEPARTMENT=CICTD
+# REACT_APP_API_URL=http://10.5.3.30:8000
 REACT_APP_API_URL=https://localhost:8000
