--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.23.22",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router": "^7.8.2",
